--- a/dhara/www/index.html
+++ b/dhara/www/index.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <meta name="format-detection" content="telephone=no"/>
         <meta name="viewport" content="user-scalable=no, initial-scale=0.5, maximum-scale=0.5, minimum-scale=0.5, width=device-width, height=device-height, target-densitydpi=device-dpi"/>
-        <link rel="stylesheet" href="css/jquery.mobile-1.3.2.min.css"/>
+        <!--<link rel="stylesheet" href="css/jquery.mobile-1.3.2.min.css"/>-->
         <link href="css/index.css" rel="stylesheet">
         <title>ZenTrade Application</title>
         <style>
@@ -12,19 +12,27 @@
             .ledgers-global { width: 10%;float: right; }
         </style>
 	<script src="js/jquery-1.9.1.min.js"></script>
-        <script src="js/jquery.mobile-1.3.2.min.js"></script>
+    <!--    <script src="js/jquery.mobile-1.3.2.min.js"></script> -->
+	<script type="text/javascript" src="js/index.js"></script>
     </head>
     <body class="mobile-custom">
-        <div data-role="page"  id="ledger_entry_people" class="main-menu-Zen-div">
+        <div data-role="page"  id="ledger_entry_people" class="main-menu-Zen-div loginpage">
             <div data-role="content">
+		<div class="logo">
+		    <img src="img/Dharalogo.jpg" id="prodimg" class="imglogo" alt=""/>
+		</div>
 		<form>
                     <div data-role="body" style="width: 100%">
-                    <input type="text" name="ledger_name" placeholder="USERNAME" required style="width: 100%; float: left;background-color: white"/>
-                    <input type="text" name="ledger_description" placeholder="PASSWORD"  style="width: 100%; float: left;background-color: white">
-                    <div style = "clear:both;"></div>
-		    <a href="category.html" data-transition="slide" rel="external"><input type='submit' name='LOGIN'  id='Login' class="fieldsubmit" value='LOGIN'/></a>
+			<input type="text" id="usrname" name="ledger_name" placeholder="USERNAME"  style="width: 100%; float: left;background-color: white"/>
+			<input type="password" id="pwd" name="ledger_description" placeholder="PASSWORD"  style="width: 100%; float: left;background-color: white">
+			<div style = "clear:both;"></div>
+			<button type='button' name='LOGIN' class="button"  id='submit' onclick="Login()">LOGIN</button>
+			<div style = "clear:both;"></div>
+			<div style="padding:5vw;">
+			If you are not a member <a href="signup.html" rel="external"><span style="text-decoration:underline;">SignUp</span></a>
+			</div>
+		    </div>
                 </form>
-            </div>
         </div>
         <script>
 	    $(function()
