--- a/dhara/www/product.html
+++ b/dhara/www/product.html
@@ -12,23 +12,26 @@
             .ledgers-global { width: 10%;float: right; }
         </style>
 	<script src="js/jquery-1.9.1.min.js"></script>
-        <script src="js/jquery.mobile-1.3.2.min.js"></script>
+    <!--    <script src="js/jquery.mobile-1.3.2.min.js"></script>-->
+	<script type="text/javascript" src="js/index.js"></script>
     </head>
-    <body class="mobile-custom">
-        <div data-role="page"  id="ledger_entry_people" class="main-menu-Zen-div">
+    <body class="mobile-custom" onload="Getproductdetails()">
+        <div data-role="page"  id="ledger_entry_people" class="main-menu-Zen-div allpage">
             <div data-role="header" class=" ">
-                <a href="sublist.html" data-transition="slide" class="iconsprite-mn-arrow-left" data-direction="reverse" data-iconpos="notext" rel="external"></a>
-                <h1>Brinjal</h1>
+		
+		    <a href="sublist.html" data-transition="slide" class="iconsprite-mn-arrow-left" data-direction="reverse" data-iconpos="notext" rel="external"></a>
+		
+                <h1 id="producthead"></h1>
             </div>
             <div data-role="content">
                 <div class="maindiv">
-		    <img class="imgclass" src="images/brinjal.png" alt=""/>
+		    <img id="prodimg" class="imgclass" alt=""/>
 		</div>
 		<div class="cont_detail">
-		    <form>
+		    <form id="myForm">
 			<div class="prodfirst">
-			    <label for="name" class="text1">Fresh Brinjal</label><br/>
-			    <label for="name" class="text2">Price: <span>25 Rs</span></label>
+			    <label id="prodname" for="name" class="text1">Fresh Brinjal</label><br/>
+			    <label for="name" class="text2">Price: <span id="prodprice"></span><span> Rs</span></label>
 			    <br/>
 			</div>
 			<div class="prodlast">
@@ -41,12 +44,10 @@
 			
 			<div class="qnty">
 			    <label for="quantity" class="textfeeld_text">Quantity: </label>
-			    <input type='text' name='qty' id='' class="field textfeeld_qt" value='' tabindex='10'/>
+			    <input type='text' name='qty' id='quantity' class="field textfeeld_qt" value='' tabindex='10'/>
 			    <label for="quantity" class="textfeeld_text pd">kg</label>
 			    <div style = "clear:both;"></div>
-			    <a href="cart.html" data-transition="slide" rel="external">
-			    <input type='submit' name='Add to cart' id='Add to cart' class="fieldsubmit" value='Add to cart' tabindex='50' />
-			    </a>
+			    <button type='button' name='Add to cart' id='Add to cart' class="button" onclick='AddtoCart()'>Add to cart</button>
 			</div>
 		    </form>
 		</div>
